--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b2768b">  <td>23/05/17 11:41:19</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TestLoginAdmin.AfterTest()[pri:0, instance:OrangeHRM_Duy.TestLoginAdmin@4d5650ae]">&lt;&lt;AfterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1094523823</td>   <td></td> </tr>
-<tr bgcolor="b2768b">  <td>23/05/17 11:41:06</td>   <td>-12361</td> <td>&nbsp;</td><td title="&gt;&gt;TestLoginAdmin.BeforeTest()[pri:0, instance:OrangeHRM_Duy.TestLoginAdmin@4d5650ae]">&gt;&gt;BeforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1094523823</td>   <td></td> </tr>
-<tr bgcolor="b2768b">  <td>23/05/17 11:41:14</td>   <td>-4133</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLoginAdmin.testLogin()[pri:0, instance:OrangeHRM_Duy.TestLoginAdmin@4d5650ae]">testLogin</td> 
-  <td>main@1094523823</td>   <td></td> </tr>
+<tr bgcolor="7465a0">  <td>23/05/23 09:39:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Browser.closeBrowser()[pri:0, instance:OrangeHRM_Duy.LoginAdminTest@55634720]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="b67e80">  <td>23/05/23 09:39:37</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginAdminTest.loginAdminPage()[pri:0, instance:OrangeHRM_Duy.LoginAdminTest@55634720]">loginAdminPage</td> 
+  <td>main@138776324</td>   <td></td> </tr>
+<tr bgcolor="b67e80">  <td>23/05/23 09:39:37</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginAdminTest.openBrowser()[pri:0, instance:OrangeHRM_Duy.LoginAdminTest@55634720]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
